--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,170 @@
-.App {
-  text-align: center;
+.app {
+width: 100vw;
+height: 100vh;
+background: aquamarine;
+background: black;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+.graphicContainer {
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+  width: 40vw;
+  height: 40vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-evenly;
+  /* border: 1px solid pink; */
+  clip-path: circle(50%);
+  background-color: aquamarine;
+  animation-name: rotateSphere;
+  animation-duration: 1.25s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+
+}
+
+.line {
+  width: 100%;
+  height: 3%;
+  background: black
+  /* margin: 1% 0; */
+
+}
+
+.line2 {
+  width: 100%;
+  height: 3%;
+  background: black;
+  /* margin: 2px 0; */
+}
+
+.line3 {
+  width: 100%;
+  height: 3%;
+  background: black;
+  /* margin: 1% 0; */
+}
+
+.line4, .line5 {
+  width: 100%;
+  height: 3%;
+  background: black;
+  /* margin: 1% 0; */
+}
+
+.graphicContainer2 {
+
+  background-color: aquamarine;
+
+  width: 40vw;
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  clip-path: circle(40%);
+  /* transform: rotateZ(-30deg); */
+  animation-name: rotateSphere;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+
+}
+
+.graphicContainer3 {
+
+  background-color: aquamarine;
+  width: 40vw;
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  clip-path: circle(30%);
+  /* transform: rotateZ(-60deg) */
+  animation-name: rotateSphere;
+  animation-duration: 1.25s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+
+}
+
+.graphicContainer4 {
+
+  background-color: aquamarine;
+
+  width: 40vw;
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  clip-path: circle(20%);
+  /* transform: rotateZ(60deg); */
+  animation-name: rotateSphere;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+
+
+}
+
+.graphicContainer5 {
+
+  background-color: aquamarine;
+  width: 40vw;
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  clip-path: circle(10%);
+  /* transform: rotateZ(60deg); */
+  animation-name: rotateSphere;
+  animation-duration: 1.25s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+
+
+}
+
+.centering {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes rotateSphere {
+  0% {
+    filter: opacity(0);
+    transform: rotateZ(0deg);
   }
-  to {
-    transform: rotate(360deg);
+
+  50% {
+    filter: opacity(1);
+  }
+
+  100% {
+    filter: opacity(1);
+    transform: rotateZ(360deg);
+  }
+}
+
+@keyframes rotateSphereReverse {
+  0% {
+    filter: opacity(0);
+    transform: rotateZ(0deg);
+  }
+
+  50% {
+    filter: opacity(1);
+  }
+
+  100% {
+    filter: opacity(1);
+    transform: rotateZ(-360deg);
   }
 }
