--- a/src/App.css
+++ b/src/App.css
@@ -1,130 +1,56 @@
 .app {
-width: 100vw;
-height: 100vh;
-background: aquamarine;
-background: black;
+  width: 100vw;
+  height: 100vh;
+  background: aquamarine;
+  background: black;
 }
 
-.graphicContainer {
+.line,
+.line2,
+.line3,
+.line4,
+.line5 {
+  width: 100%;
+  height: 3%;
+  background: black;
+}
 
-
+.graphicContainer,
+.graphicContainer2,
+.graphicContainer3,
+.graphicContainer4,
+.graphicContainer5 {
+  background-color: aquamarine;
   width: 40vw;
   height: 40vw;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  /* border: 1px solid pink; */
   clip-path: circle(50%);
-  background-color: aquamarine;
   animation-name: rotateSphere;
-  animation-duration: 1.25s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-
-}
-
-.line {
-  width: 100%;
-  height: 3%;
-  background: black
-  /* margin: 1% 0; */
-
-}
-
-.line2 {
-  width: 100%;
-  height: 3%;
-  background: black;
-  /* margin: 2px 0; */
-}
-
-.line3 {
-  width: 100%;
-  height: 3%;
-  background: black;
-  /* margin: 1% 0; */
-}
-
-.line4, .line5 {
-  width: 100%;
-  height: 3%;
-  background: black;
-  /* margin: 1% 0; */
+  animation-duration: 80s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 .graphicContainer2 {
-
-  background-color: aquamarine;
-
-  width: 40vw;
-  height: 40vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
   clip-path: circle(40%);
-  /* transform: rotateZ(-30deg); */
-  animation-name: rotateSphere;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-
+  animation-duration: 40s;
 }
 
 .graphicContainer3 {
-
-  background-color: aquamarine;
-  width: 40vw;
-  height: 40vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
   clip-path: circle(30%);
-  /* transform: rotateZ(-60deg) */
-  animation-name: rotateSphere;
-  animation-duration: 1.25s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-
+  animation-duration: 20s;
 }
 
 .graphicContainer4 {
-
-  background-color: aquamarine;
-
-  width: 40vw;
-  height: 40vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
   clip-path: circle(20%);
-  /* transform: rotateZ(60deg); */
-  animation-name: rotateSphere;
-  animation-duration: 1.5s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-
-
+  animation-duration: 10s;
 }
 
 .graphicContainer5 {
-
-  background-color: aquamarine;
-  width: 40vw;
-  height: 40vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
   clip-path: circle(10%);
-  /* transform: rotateZ(60deg); */
-  animation-name: rotateSphere;
-  animation-duration: 1.25s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-
-
+  animation-duration: 5s;
 }
 
 .centering {
@@ -138,17 +64,17 @@ background: black;
 }
 
 @keyframes rotateSphere {
-  0% {
-    filter: opacity(0);
+  from {
+    /* filter: opacity(0); */
     transform: rotateZ(0deg);
   }
 
-  50% {
+  /* 50% {
     filter: opacity(1);
-  }
+  } */
 
-  100% {
-    filter: opacity(1);
+  to {
+    /* filter: opacity(1); */
     transform: rotateZ(360deg);
   }
 }
